--- a/source_overleaf/df/education.tex
+++ b/source_overleaf/df/education.tex
@@ -11,43 +11,32 @@
 
 %---------------------------------------------------------
   \cventry
-    {M.S. in Computer Science and Engineering} % Degree
+    {M.S./B.S in Computer Science and Engineering} % Degree
     {National Taiwan Ocean University} % Institution
     {Keelung, Taiwan} % Location
-    {Sep, 2020 - Aug, 2022} % Date(s)
+    {Sep, 2016 - Aug, 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Finished several projects with new technology and know how a software being. }
-        \item {Collaborated with team to build  whole project from scratch.}
+        \item {Construct fundamental Computer Science knowledges including Data Structure, Algorithm,  Database, Linear Algebra, Networking, etc.}
+        % \item {Learning how IoT working, designing and developing with Raspberry Pi and Arduino.}
+        % \item {In the Web-service software program, learning how to design software to communicate each other.}
+        \item {Collaborated with team to build whole project from scratch. Including NLP project and web-service application. Be a project manager and SWE leading the project.}
+        \item {Designing and managing infrastructure in laboratory. Including Networking, Server and Service design.}
+        \item {Certification of Software Engineering Program. Such as Project management, System Design, Software Quality Assurance, Agile development. From Software requirement extraction to delivery and maintenance.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
-  \cventry
-    {Certification of Software Engineering Program} % Degree
-    {National Taiwan Ocean University} % Institution
-    {Keelung, Taiwan} % Location
-    {Sep, 2016 - Aug, 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {This additional certification proved the student that learned more detail, progress and knowledge in Software Engineering field.}
-      \end{cvitems}
-    }
-
-
-
-%---------------------------------------------------------
-  \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {National Taiwan Ocean University} % Institution
-    {Keelung, Taiwan} % Location
-    {Sep, 2016 - Aug, 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got skill and experience in Computer Science field.}
-      \end{cvitems}
-    }
-
+  % \cventry
+  %   {Certification of Software Engineering Program} % Degree
+  %   {} % Institution
+  %   {} % Location
+  %   {} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) bullet points
+  %       \item {This additional certification proved the student possess the knowledge in Software Engineering. Such as Project management, System Design, Software Quality Assurance, Agile development. From Software requirement extraction to delivery and maintenance.}
+  %     \end{cvitems}
+  %   }
 
 %---------------------------------------------------------
 \end{cventries}
