--- a/source_overleaf/df/experience.tex
+++ b/source_overleaf/df/experience.tex
@@ -9,6 +9,7 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+
 %---------------------------------------------------------
   \cventry
     {Intern of Software developing} % Job title
@@ -17,13 +18,14 @@
     {Jul. 2021 - Dec. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researching blockchain tech for solution of third-party finance system}
-        \item {Designed an personal data authorization system.}
-        \item {Designed an solution for electric power data exchange.}
-        \item {Building a decentralized system with high-throughput and reliability.}
-        \item {Design and deployed the system in a dedicated cloud platform with CI/CD chain.}
+        \item {Researching, designing, and building a personal data authorization system with reliability and throughput. Including decentralized, microservice, Event-driven architecture, CI/CD chain, block-chain and third-party finance system. }
+        % \item {Designed an personal data authorization system.}
+        % \item {Designed an solution for electric power data exchange.}
+        % \item {Building a decentralized system with high-throughput and reliability.}
+        % \item {Design and deployed the system in a dedicated cloud platform with CI/CD chain.}
       \end{cvitems}
     }
+
 
 %---------------------------------------------------------
   \cventry
@@ -33,9 +35,9 @@
     {Jan. 2021 - June. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Migrated whole school data to dedicated infrastructure with.}
-        \item {Operated new CMS to assist data migration.}
+        \item {Migrated whole school data to dedicated infrastructure with. Operated new CMS to assist data migration.}
       \end{cvitems}
     }
 %---------------------------------------------------------
+
 \end{cventries}
