--- a/source_overleaf/df/skills.tex
+++ b/source_overleaf/df/skills.tex
@@ -3,36 +3,33 @@
 %-------------------------------------------------------------------------------
 \cvsection{Skills}
 
-
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvskills}
-
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
+    {Docker, Jenkins, GitHub, GitLab} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
+    {Framework} % Category
+    {SpringBoot, Django, Pact, RabbitMQ, Kafka, web3} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {Java, Python, C, JavaScript, Solidity} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Languages} % Category
-    {Korean, English, Japanese} % Skills
+    {Operation System} % Category
+    {Linux, Mac OS, Ubuntu, Esxi, unraid, TrueNAS} % Skills
 
 %---------------------------------------------------------
+  \cvskill
+    {Cloud Platform} % Category
+    {Digital Ocean, Oracle Cloud, AWS, Azure, Fly.io} % Skills
+
 \end{cvskills}
