--- a/source_overleaf/df/summary.tex
+++ b/source_overleaf/df/summary.tex
@@ -8,9 +8,10 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-
 %---------------------------------------------------------
-Master Degree of Science, Department of Computer Science, National Taiwan Ocean University. 
-3+ years experience for web-service and backend developing. A nerd who have passion in DIY homelab and infrastructure with Networking. Experience with MacOS, Windows and different Linux-distro. Very interesting and motivated at learning new technologies and tools if needed.
 
+I have 3+ years experiences in different web services and back-end development. During my graduate studies, I focused on event-driven microservice architecture and messaging platforms. In addition to my web development experience, I have also experienced in various other software fields, including iOS application development, IoT embedded devices and NLP processing. Beyond my professional interests, I am an enthusiast with over ten years of experience in DIYPC, homelab and networking. 
 \end{cvparagraph}
+
+
+% , resulting in the successful development of a Data Authorization System, a microservice based data and finance system, and an Event-driven based microservice testing service.
