update with new cv version. one Page.

--- a/source_overleaf/df/education.tex
+++ b/source_overleaf/df/education.tex
@@ -17,7 +17,7 @@
     {Sep, 2016 - Aug, 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Construct fundamental Computer Science knowledges including Data Structure, Algorithm,  Database, Linear Algebra, Networking, etc.}
+        % \item {Construct fundamental Computer Science knowledges including Data Structure, Algorithm,  Database, Linear Algebra, Networking, etc.}
         % \item {Learning how IoT working, designing and developing with Raspberry Pi and Arduino.}
         % \item {In the Web-service software program, learning how to design software to communicate each other.}
         \item {Collaborated with team to build whole project from scratch. Including NLP project and web-service application. Be a project manager and SWE leading the project.}
