--- a/source_overleaf/resume.tex
+++ b/source_overleaf/resume.tex
@@ -111,10 +111,7 @@
 % \input{df/committees.tex}
 
 \input{df/education.tex}
-
-\input{df/extracurricular.tex}
-
-
+% \input{df/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
