--- a/source_overleaf/df/education.tex
+++ b/source_overleaf/df/education.tex
@@ -20,7 +20,7 @@
         % \item {Construct fundamental Computer Science knowledges including Data Structure, Algorithm,  Database, Linear Algebra, Networking, etc.}
         % \item {Learning how IoT working, designing and developing with Raspberry Pi and Arduino.}
         % \item {In the Web-service software program, learning how to design software to communicate each other.}
-        \item {Collaborated with team to build whole project from scratch. Including NLP project and web-service application. Be a project manager and SWE leading the project.}
+        \item {Collaborating with team to build whole project from scratch. Including Machine-Learning, NLP project and web-service application. Being a project manager and SWE leading the project.}
         \item {Designing and managing infrastructure in laboratory. Including Networking, Server and Service design.}
         \item {Certification of Software Engineering Program. Such as Project management, System Design, Software Quality Assurance, Agile development. From Software requirement extraction to delivery and maintenance.}
       \end{cvitems}
