--- a/source_overleaf/df/experience.tex
+++ b/source_overleaf/df/experience.tex
@@ -12,13 +12,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {Intern of Software developing} % Job title
+    {Intern of Software Engineer} % Job title
     {Industrial Technology Research Institute ,ITRI} % Organization
     {Hsinchu, Taiwan} % Location
     {Jul. 2021 - Dec. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researching, designing, and building a personal data authorization system with reliability and throughput. Including decentralized, microservice, Event-driven architecture, CI/CD chain, block-chain and third-party finance system. }
+        \item {Researching, designing, and building a personal data authorization system with reliability and throughput. Including decentralized, microservice, Event-driven architecture, CI/CD chain, security, block-chain and third-party finance system. }
         % \item {Designed an personal data authorization system.}
         % \item {Designed an solution for electric power data exchange.}
         % \item {Building a decentralized system with high-throughput and reliability.}
@@ -27,17 +27,17 @@
     }
 
 
-%---------------------------------------------------------
-  \cventry
-    {Data Migration specialist} % Job title
-    {National Taiwan Ocean University} % Organization
-    {Keelung, Taiwan} % Location
-    {Jan. 2021 - June. 2021} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Migrated whole school data to dedicated infrastructure with. Operated new CMS to assist data migration.}
-      \end{cvitems}
-    }
-%---------------------------------------------------------
+% %---------------------------------------------------------
+%   \cventry
+%     {Data Migration} % Job title
+%     {National Taiwan Ocean University} % Organization
+%     {Keelung, Taiwan} % Location
+%     {Jan. 2021 - June. 2021} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) of tasks/responsibilities
+%         \item {Migrating whole school data to dedicated infrastructure with. Operated new CMS to assist data migration.}
+%       \end{cvitems}
+%     }
+% %---------------------------------------------------------
 
 \end{cventries}
